User auth functionality added.
User login page implemented. Token details stored in local storage, therefore login not required again unless local storage wiped.
User details not yet stored faithfully - user auth is a test case currently.

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/tmtcam-042/FlickrApp#readme",
   "dependencies": {
-    "express": "^4.17.3",
     "unirest": "^0.6.0"
+  },
+  "devDependencies": {
+    "express": "^4.17.3"
   }
 }
